--- a/DemoWpf/App.xaml
+++ b/DemoWpf/App.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:demoWpf="clr-namespace:DemoWpf"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    Exit="App_OnExit"
     Startup="App_OnStartup"
     StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
@@ -61,6 +60,18 @@
                 Color="{DynamicResource AccentColor}" />
 
             <!--  Styles  -->
+            <Style x:Key="MaterialDesignRoot" TargetType="{x:Type Control}">
+                <Setter Property="FontFamily" Value="{DynamicResource MaterialDesignFont}" />
+                <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
+                <Setter Property="SnapsToDevicePixels" Value="True" />
+                <Setter Property="TextElement.FontSize" Value="13" />
+                <Setter Property="TextElement.FontWeight" Value="Regular" />
+                <Setter Property="TextElement.Foreground" Value="{DynamicResource SecondaryTextBrush}" />
+                <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
+                <Setter Property="TextOptions.TextRenderingMode" Value="Auto" />
+                <Setter Property="UseLayoutRounding" Value="True" />
+            </Style>
+
             <Style BasedOn="{StaticResource MaterialDesignLinearProgressBar}" TargetType="{x:Type ProgressBar}">
                 <Setter Property="BorderThickness" Value="0" />
                 <Setter Property="Foreground" Value="{DynamicResource SecondaryAccentBrush}" />
