--- a/YoutubeExplode.DemoWpf/App.xaml
+++ b/YoutubeExplode.DemoWpf/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application
-    x:Class="DemoWpf.App"
+    x:Class="YoutubeExplode.DemoWpf.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:demoWpf="clr-namespace:DemoWpf"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:demoWpf="clr-namespace:YoutubeExplode.DemoWpf"
     Startup="App_OnStartup"
     StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
