--- a/YoutubeExplode.DemoWpf/Views/MainWindow.xaml
+++ b/YoutubeExplode.DemoWpf/Views/MainWindow.xaml
@@ -73,7 +73,7 @@
             <StackPanel Orientation="Vertical">
                 <Grid HorizontalAlignment="Stretch" Background="Black">
                     <!--  Thumbnail  -->
-                    <Image Height="180" Source="{Binding Thumbnail.Url}" />
+                    <Image Height="180" Source="{Binding VideoThumbnail.Url}" />
 
                     <!--  Duration  -->
                     <TextBlock
@@ -83,7 +83,7 @@
                         VerticalAlignment="Bottom"
                         Background="Black"
                         Foreground="{DynamicResource SecondaryInverseTextBrush}"
-                        Text="{Binding Video.Duration}" />
+                        Text="{Binding Video.Duration, TargetNullValue=Live}" />
                 </Grid>
 
                 <!--  Basic metadata  -->
@@ -105,7 +105,7 @@
                                 Margin="6,6,0,6"
                                 VerticalAlignment="Top"
                                 DockPanel.Dock="Left"
-                                Source="{Binding Channel.LogoUrl}" />
+                                Source="{Binding ChannelThumbnail.Url}" />
 
                             <Grid>
                                 <Grid.RowDefinitions>
