--- a/YoutubeExplode.Demo.Gui/Views/MainWindow.axaml
+++ b/YoutubeExplode.Demo.Gui/Views/MainWindow.axaml
@@ -3,10 +3,10 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
-    xmlns:converters="using:YoutubeExplode.Demo.Gui.Converters"
+    xmlns:converters="clr-namespace:YoutubeExplode.Demo.Gui.Converters"
     xmlns:materialControls="clr-namespace:Material.Styles.Controls;assembly=Material.Styles"
     xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
-    xmlns:viewModels="using:YoutubeExplode.Demo.Gui.ViewModels"
+    xmlns:viewModels="clr-namespace:YoutubeExplode.Demo.Gui.ViewModels"
     x:Name="Root"
     Title="YoutubeExplode Demo"
     Width="720"
