--- a/YoutubeExplode.Demo.Gui/App.axaml
+++ b/YoutubeExplode.Demo.Gui/App.axaml
@@ -5,7 +5,8 @@
     xmlns:materialAssists="clr-namespace:Material.Styles.Assists;assembly=Material.Styles"
     xmlns:materialControls="clr-namespace:Material.Styles.Controls;assembly=Material.Styles"
     xmlns:materialIcons="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
-    xmlns:materialStyles="clr-namespace:Material.Styles.Themes;assembly=Material.Styles">
+    xmlns:materialStyles="clr-namespace:Material.Styles.Themes;assembly=Material.Styles"
+    RequestedThemeVariant="Light">
     <Application.Styles>
         <materialStyles:MaterialTheme />
         <materialIcons:MaterialIconStyles />
